--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -97,7 +97,13 @@
             <artifactId>mapstruct</artifactId>
             <version>1.6.3</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>1.19.0</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
