--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Smart Emergency Dispatcher
+
+spring.datasource.url=jdbc:mysql://localhost:3306/smart_emergency_dispatcher
+spring.datasource.username=root
+spring.datasource.password=abdo9122
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
