--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -103,6 +103,18 @@
             <version>1.19.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-spatial</artifactId>
+            <version>6.2.13.Final</version> <!-- Use version matching your Hibernate -->
+        </dependency>
+
     </dependencies>
 
 	<build>
