--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -131,7 +131,11 @@
             <artifactId>jts-core</artifactId>
             <version>1.19.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-spatial</artifactId>
+            <version>7.1.8.Final</version>
+        </dependency>
     </dependencies>
 
 	<build>
