Add redis to save/get the location and status of each vehicle in a quick way

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -136,6 +136,12 @@
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
         <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>7.2.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-spatial</artifactId>
             <version>6.3.0.Final</version>
@@ -150,12 +156,7 @@
             <artifactId>spring-dotenv</artifactId>
             <version>4.0.0</version>
         </dependency>
-
-
-
-
     </dependencies>
-
     <build>
         <resources>
             <resource>
